Fix todo item jitter on description collapse open
Using top padding instead of top margin for description

--- a/styles/todoList.less
+++ b/styles/todoList.less
@@ -82,5 +82,6 @@
   }
 }
 .grd-todo-item-description {
-  margin-top: 8px;
+  padding-top: 8px;
+  overflow: hidden;
 }
